Update model's names and init documentation.yaml
