# server/src/main/kotlin/com/aselsan/routes/CustomerRoutes.kt
@@ -1,5 +1,5 @@
 package com.aselsan.routes
-import com.aselsan.domain.model.CustomerResponseDto
+import com.aselsan.domain.model.CustomerResponse
 import com.aselsan.service.CustomerService
 import io.ktor.http.HttpStatusCode
 import io.ktor.server.response.respond
@@ -11,7 +11,7 @@ import io.ktor.server.routing.route
 fun Route.customerRoutes(customerService: CustomerService) {
     route("/customers") {
         get("") {
-            val customers: List<CustomerResponseDto>  = customerService.getAllCustomers()
+            val customers: List<CustomerResponse>  = customerService.getAllCustomers()
             call.respond(HttpStatusCode.OK, customers)
         }
         get("/{id}") {
@@ -21,7 +21,7 @@ fun Route.customerRoutes(customerService: CustomerService) {
                 call.respond(HttpStatusCode.BadRequest)
                 return@get
             }
-            val customer : CustomerResponseDto? = customerService.findById(id)
+            val customer : CustomerResponse? = customerService.findById(id)
             if (customer == null) {
                 call.respond(HttpStatusCode.NotFound)
                 return@get
