# server/src/main/kotlin/com/aselsan/routes/ProductRoutes.kt
@@ -1,5 +1,5 @@
 package com.aselsan.routes
-import com.aselsan.domain.model.ProductResponseDto
+import com.aselsan.domain.model.ProductResponse
 import com.aselsan.service.ProductService
 
 import io.ktor.http.HttpStatusCode
@@ -12,11 +12,9 @@ import io.ktor.server.routing.route
 fun Route.productRoutes(productService: ProductService) {
     route("/products") {
         get("") {
-            val products: List<ProductResponseDto> = productService.getAllProducts()
+            val products: List<ProductResponse> = productService.getAllProducts()
             call.respond(HttpStatusCode.OK, products)
         }
-
-
     }
 }
 
