# server/src/main/kotlin/com/aselsan/service/CustomerService.kt
@@ -1,5 +1,5 @@
 package com.aselsan.service
-import com.aselsan.domain.model.CustomerResponseDto
+import com.aselsan.domain.model.CustomerResponse
 import com.aselsan.utils.toCustomerResponseDto
 import com.aselsan.repository.CustomerRepository
 
@@ -8,12 +8,12 @@ import com.aselsan.repository.CustomerRepository
 
 class CustomerService() {
 
-    fun getAllCustomers(): List<CustomerResponseDto> {
+    fun getAllCustomers(): List<CustomerResponse> {
         val customers = CustomerRepository.allCustomers()
         return customers.map { it.toCustomerResponseDto() }
     }
 
-    fun findById(id: String): CustomerResponseDto? {
+    fun findById(id: String): CustomerResponse? {
         val customer = CustomerRepository.customerById(id)
         return customer?.toCustomerResponseDto()
     }
