# server/src/main/kotlin/com/aselsan/service/ProductService.kt
@@ -1,11 +1,11 @@
 package com.aselsan.service
-import  com.aselsan.domain.model.ProductResponseDto
+import  com.aselsan.domain.model.ProductResponse
 import  com.aselsan.repository.ProductRepository
 import  com.aselsan.utils.toProductResponseDto
 
 
 class ProductService {
-    fun getAllProducts(): List<ProductResponseDto> {
+    fun getAllProducts(): List<ProductResponse> {
         val products = ProductRepository.getAll()
         return products.map { it.toProductResponseDto() }
     }
