# server/src/main/kotlin/com/aselsan/utils/DtoMappers.kt
@@ -1,11 +1,11 @@
 package com.aselsan.utils
 import com.aselsan.domain.customer.Customer
-import com.aselsan.domain.model.CustomerResponseDto
-import com.aselsan.domain.model.ProductResponseDto
+import com.aselsan.domain.model.CustomerResponse
+import com.aselsan.domain.model.ProductResponse
 import com.aselsan.domain.product.Product
 
-fun Customer.toCustomerResponseDto(): CustomerResponseDto {
-    return CustomerResponseDto(
+fun Customer.toCustomerResponseDto(): CustomerResponse {
+    return CustomerResponse(
         id = this.id.toString(),
         name = this.name,
         registeredAt = this.registeredAt.toString(),
@@ -18,8 +18,8 @@ fun Customer.toCustomerResponseDto(): CustomerResponseDto {
 
 
 // Product -> ProductResponseDto
-fun Product.toProductResponseDto(): ProductResponseDto {
-    return ProductResponseDto(
+fun Product.toProductResponseDto(): ProductResponse {
+    return ProductResponse(
         id = this.id.toString(),
         name = this.name,
         category = this.category,
